# RM_mid

./: CMakeLists.txt  README.md
data/: AFINN-en-165.txt  negative_words.txt  stopword.txt
docs/: Introduction.docx
include/: DataTable.h  Lexicon.h  Negword.h  Preprocess.h  StanceDetection.h  Tokenizer.h
src/: Lexicon.cpp  Negword.cpp  Preprocess.cpp  StanceDetection.cpp  Tokenizer.cpp  main.cpp
testdata/: test1.txt  test2.txt  test3.txt  test4.txt  test5.txt  test6.txt  test8.txt
